--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "14.0.2",
     "react": "^18",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
