--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
+    "react-bootstrap": "^2.9.1",
     "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
