--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "mongoose": "^8.0.1",
-    "next": "14.0.2",
+    "next": "^14.0.2",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.9.1",
