--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.9.1",
     "react-collapse": "^5.1.1",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^20",
